Refactor AegisCommand for improved structure and clarity